--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ header h1 {
 .menu-hamburguer {
   position: absolute;
   top: 16px;
-  right: 16px;
+  right: 10px;
   z-index: 10;
   display: flex;
   flex-direction: column;
@@ -198,8 +198,9 @@ header h1 {
   flex-direction: column;
   position: absolute;
   top: 58px;
-  right: 16px;
-  min-width: 220px;
+  /*mover submenu hamburguer*/
+  right: -5px;
+  min-width: 180px;
   background: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(12px);
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
@@ -258,7 +259,7 @@ header h1 {
   min-width: 150px;
   /* espaço do fundo submenu*/
 
-  top: 58%;
+  top: 50%;
   /* ⬇️ movimentar submenu Logo abaixo do botão */
   left: 1%;
   /* ⬅️ Centralizado horizontalmente */
